[package]
name = "tui-chan"
version = "0.5.0"
authors = ["tuqqu <artkurbidaev@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tui = "0.16"
termion = "1.5"
chrono = "0.4"
htmlescape="0.3"
regex="1.4"
voca_rs="1.13"
clipboard = "0.5"
open = "1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
